<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="create_character_select_customer">选择客户</string>
    <string name="create_character_select_zone">选择大区</string>
    <string name="create_character_select_server">选择服务器</string>
    <string name="create_character_account_input">输入账号</string>
    <string name="create_character_password_input">输入密码</string>

    <string name="create_character_select_customer_contact">联系方式：%s %s</string>

    <string name="create_character_label">创建角色</string>
    <!--<string name="create_character_select_customer">客户*</string>-->
    <!--<string name="create_character_select_zone">大区*</string>
    <string name="create_character_select_server">主服务器*</string>-->
    <string name="create_character_account">账号*</string>
    <string name="create_character_password">密码*</string>
    <string name="create_character_security_lock">安全锁</string>
    <string name="create_character_name">角色名*</string>
    <string name="create_character_select_sect">门派*</string>
    <string name="create_character_select_internal">心法*</string>
    <string name="create_character_remark">备注</string>
    <string name="create_character_success">创建角色成功</string>

    <string name="character_info_detail">详细信息</string>
    <string name="character_info_order">订单</string>

    <string name="character_detail_zone">大区</string>
    <string name="character_detail_server">服务器</string>
    <string name="character_detail_sect">门派</string>
    <string name="character_detail_internal">心法</string>
    <string name="character_detail_account">账号</string>
    <string name="character_detail_password">密码</string>
    <string name="character_detail_security_lock">安全锁</string>
    <string name="character_detail_remark">备注</string>
    <string name="character_detail_create_time">创建于</string>

    <string name="error_password_format">密码格式8–32位,需字母/数字/符号2种或以上</string>
    <string name="error_security_lock">安全锁长度错误，必须为6位</string>
    <string name="error_character_name">角色名格式错误，仅能包含中文数字与‘@’</string>
    <string name="error_customer">请选择客户</string>
    <string name="error_zone">请选择大区</string>
    <string name="error_server">请选择服务器</string>
    <string name="error_account_format">账号格式应为：1.首位字母,4–18位 2.邮箱 3.手机号</string>
    <string name="error_sect">请选择门派</string>
    <string name="error_internal">请选择心法</string>
    <string name="error_create_character">创建角色失败</string>
    <string name="error_delete_character">删除角色失败</string>
    <string name="error_get_character_failure">获取角色信息失败</string>

    <string name="dialog_character_info_title">提示</string>
    <string name="dialog_character_info_message_delete">确认要删除角色: %s 吗?\n删除该角色将会删除所有该角色的订单</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="action_delete">删除</string>

</resources>